--- a/app/globals.css
+++ b/app/globals.css
@@ -5,6 +5,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;1,900&family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 @keyframes inAnimation {
+
     /* animate to slide from left */
     0% {
         transform: translateX(-100%);
@@ -23,4 +24,61 @@
     100% {
         transform: translateX(100%);
     }
+}
+.pagination{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    font-size: large;
+}
+
+.pagination>li {
+    display: inline-block;
+    padding-left: 0;
+}
+
+.pagination>li {
+    list-style: none;
+}
+
+.pagination>li>a,
+.pagination>li>span {
+    position: relative;
+    float: left;
+    padding: 6px 12px;
+    border-radius: 8px;
+    margin: 0 8px;
+    text-decoration: none;
+    color: #6F767E;
+    margin-left: -1px;
+}
+
+.pagination>li.active>a {
+    background-color: #475BE8;
+    color: white;
+}
+
+.pagination>li>a:hover {
+    background-color: #475BE8;
+    color: white;
+}
+
+.pagination>li:first-child>a,
+.pagination>li:first-child>span {
+    margin-left: 0;
+    padding: 0px;
+    border-bottom-left-radius: 4px;
+    border-top-left-radius: 4px;
+    display: none !important;
+}
+
+.pagination>li:last-child>a,
+.pagination>li:last-child>span {
+    border-bottom-right-radius: 4px;
+    margin-right: 0;
+    padding: 0px !important;
+    border-top-right-radius: 4px;
+    display: none !important;
 }
