--- a/app/globals.css
+++ b/app/globals.css
@@ -5,6 +5,14 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;1,900&family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    display: none;
+}
+input[type=number] {
+    -moz-appearance: textfield;
+    /* Firefox */
+  }
 @keyframes inAnimation {
 
     /* animate to slide from left */
@@ -26,7 +34,8 @@
         transform: translateX(100%);
     }
 }
-.pagination{
+
+.pagination {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -87,6 +96,6 @@
 .leaflet-bottom,
 .leaflet-control,
 .leaflet-top,
-.leaflet-pane{
+.leaflet-pane {
     z-index: 0 !important;
 }
