--- a/app/globals.css
+++ b/app/globals.css
@@ -9,10 +9,12 @@ input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
     display: none;
 }
+
 input[type=number] {
     -moz-appearance: textfield;
     /* Firefox */
-  }
+}
+
 @keyframes inAnimation {
 
     /* animate to slide from left */
@@ -98,4 +100,25 @@ input[type=number] {
 .leaflet-top,
 .leaflet-pane {
     z-index: 0 !important;
+}
+
+.loader {
+    width: 48px;
+    height: 48px;
+    border-radius: 50%;
+    display: inline-block;
+    border-top: 3px solid #FFF;
+    border-right: 3px solid transparent;
+    box-sizing: border-box;
+    animation: rotation 1s linear infinite;
+}
+
+@keyframes rotation {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
 }
